--- a/first.html
+++ b/first.html
@@ -24,9 +24,9 @@
 
 <input type="checkbox" checked name="subscribe" id="subscribe-field">
 <label for="subscribe-field">Подписать Вас на рассылку?</label>
-
+<p>Goodbye</p>
 </form>
-<p>досвидания</p>
+
 
 </body>
 </html>
