--- a/first.html
+++ b/first.html
@@ -5,8 +5,8 @@
 </head>
 <body> 
 <h1>Форма регистрации</h1>
-<p>будьте внимательны при заполнении формы </p>
-<p>спасибо за внимательность</p>
+<p>указывайте только правдивую информацию</p>
+
 <form method=''post">
 <label for="login-field">Ваш логин</label>
 <input id="login-field" type ="text" name="login">
@@ -24,7 +24,7 @@
 
 <input type="checkbox" checked name="subscribe" id="subscribe-field">
 <label for="subscribe-field">Подписать Вас на рассылку?</label>
-<p>Goodbye</p>
+
 </form>
 
 
