--- a/first.html
+++ b/first.html
@@ -5,6 +5,7 @@
 <link rel="stylesheet" type ="text/css" href="main.css">
 </head>
 <body> 
+<main>
 <h1>Форма регистрации</h1>
 <p>указывайте только правдивую информацию</p>
 
@@ -27,6 +28,7 @@
 <label for="subscribe-field">Подписать Вас на рассылку?</label>
 
 </form>
+</main>
 
 
 </body>
