--- a/first.html
+++ b/first.html
@@ -5,11 +5,11 @@
 <link rel="stylesheet" type ="text/css" href="main.css">
 </head>
 <body> 
-<main>
+<div class="main">
 <h1>Форма регистрации</h1>
 <p>указывайте только правдивую информацию</p>
 
-<form method=''post">
+<form id="log" method=''post">
 <label for="login-field" >логин</label>
 <input id="login-field" type ="text" name="login" placeholder="Ваш логин">
 <br><br>
@@ -28,8 +28,9 @@
 <label for="subscribe-field">Подписать Вас на рассылку?</label>
 
 </form>
-</main>
 
+
+</div>
 
 </body>
 </html>
